--- a/_config.yml
+++ b/_config.yml
@@ -95,10 +95,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "jonndev"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "I am an **ordinary** person."
+  location         : "Tokyo, Japan/Seoul, Korea"
   email            :
   links:
     - label: "Email"
